Closed Bug 1409656 Opened 7 years ago Closed 7 years ago

[e10s] ContentCacheInParent should append app notes about the result of RequestIMEToCommitComposition() to crash report when it hits unexpected state in OnEventNeedingAckHandled()

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

According to the crash reports after bug 1408086, looks like that the users meet the crash (bug 1405832) after ContentCacheInParent::RequestIMEToCommitComposition() returns true. I need to log last 2 results and their reasons to app notes of crash report.
Status: NEW → ASSIGNED
Comment on attachment 8919832 [details]
Bug 1409656 - Append log of ContentCacheInParent::RequestIMEToCommitComposition() in the latest 2 sets of composition events to app notes of crash report when ContentCacheInParent::OnEventNeedingAckHandled() meets unexpected state and crash itself

https://reviewboard.mozilla.org/r/190768/#review196234
Attachment #8919832 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/45675cb67459
Append log of ContentCacheInParent::RequestIMEToCommitComposition() in the latest 2 sets of composition events to app notes of crash report when ContentCacheInParent::OnEventNeedingAckHandled() meets unexpected state and crash itself r=m_kato
https://hg.mozilla.org/mozilla-central/rev/45675cb67459
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: